# gittest_selfup

./: CMakeLists.txt
cmake/Modules/: BuildNix.cmake  BuildWin32.cmake  FindLibEvent.cmake
data/: GsConfig.conf
include/gittest/: bypart_git.h  frame.h  gittest.h  gittest_ev2_test.h  gittest_ev2_test_c.h  gui.h  net4.h
src/: bypart_git.cpp  frame.cpp  gittest.cpp  gittest_ev2_common.cpp  gittest_ev2_maint.cpp  gittest_ev2_selfupdate.cpp  gittest_ev2_serv.cpp  gittest_ev2_test_c.cpp  gittest_ev2_test_s.cpp  gittest_ev2_test_su.cpp  gui.cpp  gui_nix.cpp  gui_win.cpp  net4_crash_handler_test.cpp  net4_epoll.cpp  net4_serv.cpp  net4_serv_main.cpp
